--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,24 +12,27 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/ress/dist/ress.min.css"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/image/favicon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/image/favicon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/image/favicon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/image/favicon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/image/favicon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/image/favicon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/image/favicon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/image/favicon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/image/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/image/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/image/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/image/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/image/favicon-192x192.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
     <link rel="shortcut icon" type="image/x-icon" href="/assets/image/favicon.ico">
     <link rel="icon" type="image/x-icon" href="/assets/image/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/image/favicon-144x144.png">
-    <meta name="msapplication-config" content="/assets/image/browserconfig.xml">
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
     <meta name="theme-color" content="#ffffff">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" media="print" onload="this.media='all'"/>
@@ -72,7 +75,6 @@
             {%- endif -%}
             <a class="social-icon" href="{{ url }}"><i class="{{ footer_link.icon | default: 'fa fa-link' }} fa-2x" title="{{ footer_link.title }}"></i></a>
             {%- endfor -%}
-            <a class="social-icon" rel="me" href="https://fosstodon.org/@hakerdefo"><i class="{{ 'fa fa-mastodon-square' }} fa-2x" title="Mastodon"></i></a>
           </div>
           {%- endif -%}
 
